--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <iframe src="https://localhost:44385/Home/Index" frameborder="0"></iframe>
+    <iframe src="https://192.168.1.115:8090" frameborder="0"></iframe>
 </body>
 </html>
